--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id "com.android.application"
     id "kotlin-android"
-    // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
 }
 
@@ -41,4 +40,8 @@ android {
 
 flutter {
     source = "../.."
+}
+ 
+ dependencies {
+    implementation 'com.google.android.gms:play-services-auth:20.4.1' // Added dependency for Google Auth
 }
