--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   firebase_core: ^3.10.0
   flutter_facebook_auth: ^7.1.1
   url_launcher: ^6.3.1
+  strava_client: ^2.1.2
 
 dev_dependencies:
   flutter_test:
