--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  intl: ^0.17.0
   dotted_dashed_line: ^0.0.3
   simple_animation_progress_bar: ^1.8.2
   animated_toggle_switch: ^0.8.4
@@ -46,13 +45,27 @@ dependencies:
   simple_circular_progress_bar: ^1.0.2
   carousel_slider: ^5.0.0
   readmore: ^3.0.0
-  calendar_agenda:
-    path: dev_lib/calendar_agenda/
   google_sign_in: ^6.2.2
-  firebase_core: ^3.10.0
   flutter_facebook_auth: ^7.1.1
   url_launcher: ^6.3.1
   strava_client: ^2.1.2
+  uni_links5: ^0.5.4
+  table_calendar: ^3.0.8
+  scrollable_positioned_list: ^0.3.8
+  health: ^12.0.1
+  permission_handler: ^11.3.1
+  workmanager: ^0.5.2
+  android_alarm_manager_plus: ^4.0.6
+  flutter_local_notifications: ^18.0.1
+  flutter_riverpod: ^2.6.1
+  intl: ^0.20.2
+  dartcore: ^0.0.8
+  flutter_animate: ^4.5.2
+  syncfusion_flutter_gauges: ^28.2.7
+  animated_text_kit: ^4.2.3
+  flutter_gen: ^5.9.0
+  flutter_speed_dial: ^7.0.0
+ 
 
 dev_dependencies:
   flutter_test:
