--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ dependencies:
   animated_text_kit: ^4.2.3
   flutter_gen: ^5.9.0
   flutter_speed_dial: ^7.0.0
+  share_plus: ^10.1.4
+  flutter_typeahead: ^5.2.0
  
 
 dev_dependencies:
@@ -92,7 +94,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/img/
-    - assets/google_oauth_client.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
